# read-comics

./: .codeclimate.yml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .release-please-manifest.json  CHANGELOG.md  README.md  README.rst  codecov.yml  conventionalcommit.json  local.yml  manage.py  next-run.yml  production-build.yml  production-run.yml  production.yml  pyproject.toml  release-please-config.json  setup.cfg  sonar-project.properties
.envs/.local/: .django  .mongo  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_yc.yml  linters.yml  main.yml  main_branch.yml  next.yml  publish.yml  publish_image.yml  publish_reports.yml  pull_request.yml  python_linters.yml  qa.yml  release-please.yml  release.yml  unit_tests.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
frontend/: .dockerignore  .eslintrc-auto-import.json  .eslintrc.js  .gitignore  .prettierignore  .stylelintrc.json  .yarnrc.yml  Dockerfile  auto-imports.d.ts  components.d.ts  index.html  jsconfig.json  package-lock.json  package.json  themeConfig.js  vite.config.js
frontend/deploy/: entrypoint.sh  replace_vars.sh
frontend/public/: envs.js
frontend/src/: App.vue  main.js
read_comics/: __init__.py  conftest.py
read_comics/characters/: apps.py  models.py  search_adapters.py  sublist_querysets.py  tasks.py  urls.py  (+1 more)
requirements/: base.txt  local.txt  production.txt
(+798 files in other folders)
