[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,merge_production_dotenvs_in_dotenv.py,manage.py
extend-select =
    C4,Q0,INP
inline-quotes = "
avoid-escape = True
min_python_version = 3.10.0
extend-ignore =
    E203,


[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
line_length = 120
known_first_party = read_comics,config
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[mypy]
python_version = 3.10
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
plugins = mypy_django_plugin.main, mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = config.settings.local

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[coverage:run]
omit = **/migrations/*
       **/tests/*
plugins = django_coverage_plugin
relative_files = True
branch = True
source = read_comics

[options]
python_requires >= 3.10.0
